Fix footnotes being cutoff on mobile

--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -181,7 +181,6 @@ hr + ol {
 
 .footnotes {
   font-size: 0.95rem;
-  padding-left: 0;
 }
 
 .footer-paginator-previous,
